--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-07-19 18:39:46 -0400 
+%% Created for Vijay at 2011-07-24 20:55:37 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,42 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@article{jock1986,
+	Author = {Jock Mackinlay},
+	Date-Added = {2011-07-24 18:52:34 -0400},
+	Date-Modified = {2011-07-24 18:54:01 -0400},
+	Journal = {ACM Transactions on Graphics},
+	Month = {April},
+	Number = {2},
+	Pages = {110-141},
+	Title = {Automating the Design of Graphical Presentations of Relational Information},
+	Volume = {5},
+	Year = {1986}}
+
+@article{cleveland1984,
+	Author = {William S. Cleveland and Robert McGill},
+	Date-Added = {2011-07-24 18:47:55 -0400},
+	Date-Modified = {2011-07-24 18:49:14 -0400},
+	Journal = {Journal of the American Statistical Association},
+	Month = {September},
+	Number = {387},
+	Pages = {531-554},
+	Title = {Graphical Perception: Theory, Experimentation, and Application to the Development of Graphical Methods},
+	Volume = {79},
+	Year = {1984}}
+
+@article{controlauto1977,
+	Author = {Richard M. Shiffrin and Walter Schneider},
+	Date-Added = {2011-07-24 16:35:14 -0400},
+	Date-Modified = {2011-07-24 16:37:43 -0400},
+	Journal = {Psychological Review},
+	Month = {March},
+	Number = {2},
+	Pages = {127-190},
+	Title = {Controlled and Automatic Human Information Processing: II. Perceptual Learning, Automatic Attending, and a General Theory},
+	Volume = {84},
+	Year = {1977}}
 
 @conference{osc2009,
 	Abstract = {The history and future of Open Sound Control (OSC) is
