--- a/vijay_thesis.tex
+++ b/vijay_thesis.tex
@@ -10,6 +10,7 @@
 % Vijay packages
 \usepackage{url}
 \usepackage{graphicx}
+\usepackage[table]{xcolor}
 \usepackage[lofdepth,lotdepth]{subfig}
 
 % Custom packages
