--- a/vizmapper.tex
+++ b/vizmapper.tex
@@ -46,8 +46,8 @@ The design of these 3 components can be regarded as the 3 main subtasks of the o
 \begin{description}
 \item \emph{The physical interface}
 \begin{description}
-\item choose sensors that are capable of detecting the desired physical phenomena/gestures
-\item choose actuators that are capable of inducing the desired physical phenomena/feedback
+\item choose sensors that are capable of detecting the desired physical phenomena or gestures
+\item choose actuators that are capable of inducing the desired physical phenomena or feedback
 \item choose sensors that are made available as outputs for connections to the inputs of the synthesis system
 \item choose actuators that are made available as inputs for connections from the outputs of the synthesis system
 \item choose structural/aesthetic materials that combined with the sensors and actuators will form the composite form of the physical interface
